examples/test/testpolicy7869.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7869
  namespace: namespace431
spec:
  podSelector:
    matchLabels:
      key18: value29
      key15: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value17
      podSelector:
        matchLabels:
          key40: value10
          key14: value23
